# safeguard

./: README.md
p1backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
p1backend/app/: db.py
p1backend/app/auth/: models.py  routes.py  schemas.py
p1backend/app/send/: models.py  routes.py  schemas.py  services.py
p1backend/app/users/: models.py
p1backend/app/utils/: jwt.py  passwordHash.py
p1backend/migrations/models/: 0_20260428144921_init.py  1_20260429174000_add_sends_table.py  2_20260429201500_add_send_password_hash.py  3_20260429203000_add_send_file_fields.py
p1backend/p1frontend/: index.html  package.json
p1backend/p1frontend/src/: App.css  index.css
p1backend/p1frontend/src/pages/: Login.tsx
p1backend/p1frontend/src/services/: authStorage.ts
p1frontend/: package-lock.json
p1frontend/src/: App.css  App.tsx
p1frontend/src/pages/: Dashboard.tsx  HomePage.tsx  PublicSend.tsx  Signup.tsx
p1frontend/src/services/: api.ts
